--- a/ui/alerts.ui
+++ b/ui/alerts.ui
@@ -1,49 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
- <widget class="QWidget" name="Form">
+ <class>Alerts</class>
+ <widget class="QWidget" name="Alerts">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>341</width>
-    <height>580</height>
+    <width>340</width>
+    <height>425</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <property name="styleSheet">
-   <string notr="true">QLabel {
-	color: white;
-}</string>
-  </property>
-  <widget class="QWidget" name="widget" native="true">
+  <widget class="QFrame" name="frame_2">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>341</width>
-     <height>581</height>
+     <width>340</width>
+     <height>425</height>
     </rect>
    </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>340</width>
+     <height>420</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>340</width>
+     <height>425</height>
+    </size>
+   </property>
    <property name="styleSheet">
-    <string notr="true">#widget {
-	background-image: url(&quot;img/tlo.png&quot;);
+    <string notr="true">QFrame{
+border: 1px solid #00ffc1;
+border-radius: 4px;
+padding: 2px;
 }</string>
    </property>
-   <widget class="QWidget" name="verticalLayoutWidget">
+   <property name="frameShape">
+    <enum>QFrame::Box</enum>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Plain</enum>
+   </property>
+   <widget class="QWidget" name="verticalLayoutWidget_7">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>60</y>
+      <y>10</y>
       <width>71</width>
-      <height>491</height>
+      <height>411</height>
      </rect>
     </property>
-    <layout class="QVBoxLayout" name="verticalLayout">
+    <layout class="QVBoxLayout" name="verticalLayout_11">
+     <property name="spacing">
+      <number>3</number>
+     </property>
      <item>
       <widget class="QFrame" name="led_err0">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true"/>
+       </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
        </property>
@@ -54,16 +87,31 @@
      </item>
      <item>
       <widget class="QFrame" name="led_err1">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
        </property>
        <property name="frameShadow">
         <enum>QFrame::Raised</enum>
        </property>
+       <property name="lineWidth">
+        <number>0</number>
+       </property>
       </widget>
      </item>
      <item>
       <widget class="QFrame" name="led_err2">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
        </property>
@@ -74,6 +122,12 @@
      </item>
      <item>
       <widget class="QFrame" name="led_err4">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
        </property>
@@ -84,6 +138,12 @@
      </item>
      <item>
       <widget class="QFrame" name="led_err5">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
        </property>
@@ -94,6 +154,12 @@
      </item>
      <item>
       <widget class="QFrame" name="led_err6">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
        </property>
@@ -104,6 +170,12 @@
      </item>
      <item>
       <widget class="QFrame" name="led_err7">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
        </property>
@@ -114,6 +186,12 @@
      </item>
      <item>
       <widget class="QFrame" name="led_err9">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
        </property>
@@ -124,6 +202,12 @@
      </item>
      <item>
       <widget class="QFrame" name="led_err10">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
        </property>
@@ -134,6 +218,12 @@
      </item>
      <item>
       <widget class="QFrame" name="led_err11">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
        </property>
@@ -144,6 +234,12 @@
      </item>
      <item>
       <widget class="QFrame" name="led_err14">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
        </property>
@@ -154,6 +250,12 @@
      </item>
      <item>
       <widget class="QFrame" name="led_err15">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
        </property>
@@ -164,25 +266,47 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="verticalLayoutWidget_2">
+   <widget class="QWidget" name="verticalLayoutWidget_8">
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>60</y>
-      <width>231</width>
-      <height>491</height>
+      <y>10</y>
+      <width>241</width>
+      <height>411</height>
      </rect>
     </property>
-    <layout class="QVBoxLayout" name="verticalLayout_2">
+    <layout class="QVBoxLayout" name="verticalLayout_12">
+     <property name="spacing">
+      <number>3</number>
+     </property>
      <item>
       <widget class="QLabel" name="label_err0">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>245</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="font">
         <font>
+         <family>Halvetica</family>
          <pointsize>10</pointsize>
+         <weight>50</weight>
+         <italic>false</italic>
+         <bold>false</bold>
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true"/>
+        <string notr="true">QLabel{
+font: 10pt &quot;Halvetica&quot; ;
+color: #e6e6e6;
+}</string>
        </property>
        <property name="text">
         <string>Identification error</string>
@@ -191,13 +315,26 @@
      </item>
      <item>
       <widget class="QLabel" name="label_err1">
+       <property name="maximumSize">
+        <size>
+         <width>240</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="font">
         <font>
+         <family>Halvetica</family>
          <pointsize>10</pointsize>
+         <weight>50</weight>
+         <italic>false</italic>
+         <bold>false</bold>
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true"/>
+        <string notr="true">QLabel{
+font: 10pt &quot;Halvetica&quot; ;
+color: #e6e6e6;
+}</string>
        </property>
        <property name="text">
         <string>Over voltage</string>
@@ -206,13 +343,26 @@
      </item>
      <item>
       <widget class="QLabel" name="label_err2">
+       <property name="maximumSize">
+        <size>
+         <width>240</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="font">
         <font>
+         <family>Halvetica</family>
          <pointsize>10</pointsize>
+         <weight>50</weight>
+         <italic>false</italic>
+         <bold>false</bold>
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true"/>
+        <string notr="true">QLabel{
+font: 10pt &quot;Halvetica&quot; ;
+color: #e6e6e6;
+}</string>
        </property>
        <property name="text">
         <string>Low voltage</string>
@@ -221,10 +371,26 @@
      </item>
      <item>
       <widget class="QLabel" name="label_err4">
+       <property name="maximumSize">
+        <size>
+         <width>240</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="font">
         <font>
+         <family>Halvetica</family>
          <pointsize>10</pointsize>
+         <weight>50</weight>
+         <italic>false</italic>
+         <bold>false</bold>
         </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QLabel{
+font: 10pt &quot;Halvetica&quot; ;
+color: #e6e6e6;
+}</string>
        </property>
        <property name="text">
         <string>motor provide speed feedback</string>
@@ -233,10 +399,26 @@
      </item>
      <item>
       <widget class="QLabel" name="label_err5">
+       <property name="maximumSize">
+        <size>
+         <width>240</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="font">
         <font>
+         <family>Halvetica</family>
          <pointsize>10</pointsize>
+         <weight>50</weight>
+         <italic>false</italic>
+         <bold>false</bold>
         </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QLabel{
+font: 10pt &quot;Halvetica&quot; ;
+color: #e6e6e6;
+}</string>
        </property>
        <property name="text">
         <string>Internal volts fault</string>
@@ -245,10 +427,26 @@
      </item>
      <item>
       <widget class="QLabel" name="label_err6">
+       <property name="maximumSize">
+        <size>
+         <width>240</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="font">
         <font>
+         <family>Halvetica</family>
          <pointsize>10</pointsize>
+         <weight>50</weight>
+         <italic>false</italic>
+         <bold>false</bold>
         </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QLabel{
+font: 10pt &quot;Halvetica&quot; ;
+color: #e6e6e6;
+}</string>
        </property>
        <property name="text">
         <string>Over temperature</string>
@@ -257,10 +455,26 @@
      </item>
      <item>
       <widget class="QLabel" name="label_err7">
+       <property name="maximumSize">
+        <size>
+         <width>240</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="font">
         <font>
+         <family>Halvetica</family>
          <pointsize>10</pointsize>
+         <weight>50</weight>
+         <italic>false</italic>
+         <bold>false</bold>
         </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QLabel{
+font: 10pt &quot;Halvetica&quot; ;
+color: #e6e6e6;
+}</string>
        </property>
        <property name="text">
         <string>Throttle error at power-up</string>
@@ -269,10 +483,26 @@
      </item>
      <item>
       <widget class="QLabel" name="label_err9">
+       <property name="maximumSize">
+        <size>
+         <width>240</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="font">
         <font>
+         <family>Halvetica</family>
          <pointsize>10</pointsize>
+         <weight>50</weight>
+         <italic>false</italic>
+         <bold>false</bold>
         </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QLabel{
+font: 10pt &quot;Halvetica&quot; ;
+color: #e6e6e6;
+}</string>
        </property>
        <property name="text">
         <string>internal reset</string>
@@ -281,10 +511,26 @@
      </item>
      <item>
       <widget class="QLabel" name="label_err10">
+       <property name="maximumSize">
+        <size>
+         <width>240</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="font">
         <font>
+         <family>Halvetica</family>
          <pointsize>10</pointsize>
+         <weight>50</weight>
+         <italic>false</italic>
+         <bold>false</bold>
         </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QLabel{
+font: 10pt &quot;Halvetica&quot; ;
+color: #e6e6e6;
+}</string>
        </property>
        <property name="text">
         <string>hall throttle open</string>
@@ -293,10 +539,26 @@
      </item>
      <item>
       <widget class="QLabel" name="label_err11">
+       <property name="maximumSize">
+        <size>
+         <width>240</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="font">
         <font>
+         <family>Halvetica</family>
          <pointsize>10</pointsize>
+         <weight>50</weight>
+         <italic>false</italic>
+         <bold>false</bold>
         </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QLabel{
+font: 10pt &quot;Halvetica&quot; ;
+color: #e6e6e6;
+}</string>
        </property>
        <property name="text">
         <string>angle sensor open</string>
@@ -305,10 +567,26 @@
      </item>
      <item>
       <widget class="QLabel" name="label_err14">
+       <property name="maximumSize">
+        <size>
+         <width>240</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="font">
         <font>
+         <family>Halvetica</family>
          <pointsize>10</pointsize>
+         <weight>50</weight>
+         <italic>false</italic>
+         <bold>false</bold>
         </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QLabel{
+font: 10pt &quot;Halvetica&quot; ;
+color: #e6e6e6;
+}</string>
        </property>
        <property name="text">
         <string>Motor over temperature</string>
@@ -317,10 +595,26 @@
      </item>
      <item>
       <widget class="QLabel" name="label_err15">
+       <property name="maximumSize">
+        <size>
+         <width>240</width>
+         <height>30</height>
+        </size>
+       </property>
        <property name="font">
         <font>
+         <family>Halvetica</family>
          <pointsize>10</pointsize>
+         <weight>50</weight>
+         <italic>false</italic>
+         <bold>false</bold>
         </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QLabel{
+font: 10pt &quot;Halvetica&quot; ;
+color: #e6e6e6;
+}</string>
        </property>
        <property name="text">
         <string>Hall Galvanometer sensor error</string>
@@ -328,35 +622,6 @@
       </widget>
      </item>
     </layout>
-   </widget>
-   <widget class="QPushButton" name="close_btn">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>10</y>
-      <width>311</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>14</pointsize>
-     </font>
-    </property>
-    <property name="cursor">
-     <cursorShape>PointingHandCursor</cursorShape>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">/*background-color: qlineargradient(spread:pad, x1:0.522955, y1:0, x2:0.517, y2:1, stop:0 rgba(255, 164, 176, 255), stop:1 rgba(255, 0, 12, 255)); */
-color: white;
-border: 1px solid darkgrey;
-border-radius: 9px;
-background-color: qlineargradient(spread:pad, x1:0.522955, y1:0, x2:0.522682, y2:0.574, stop:0 rgba(255, 255, 255, 255), stop:1 rgba(255, 0, 12, 255));
-background-image: none;</string>
-    </property>
-    <property name="text">
-     <string>Close</string>
-    </property>
    </widget>
   </widget>
  </widget>
